[gd_scene load_steps=11 format=3 uid="uid://cf4xkqs74ytur"]

[ext_resource type="Script" path="res://src/perry_run/perry_run.gd" id="2_1lkn6"]
[ext_resource type="PackedScene" uid="uid://csika1k1sresr" path="res://src/main/clickable_area.tscn" id="2_xnsfy"]
[ext_resource type="PackedScene" uid="uid://b7gr1u1puu88l" path="res://src/perry_run/tile_map.tscn" id="3_axivd"]
[ext_resource type="PackedScene" uid="uid://bxseg85es8o1u" path="res://src/perry_run/player.tscn" id="3_d1s5q"]
[ext_resource type="PackedScene" uid="uid://dp2een83p3lff" path="res://src/perry_run/cp_1.tscn" id="4_8luf4"]
[ext_resource type="PackedScene" uid="uid://m5niu6tioii2" path="res://src/perry_run/race_track.tscn" id="4_f80jr"]
[ext_resource type="PackedScene" uid="uid://c3kd1ocyiv6lp" path="res://src/perry_run/cp_2.tscn" id="5_eslgb"]
[ext_resource type="PackedScene" uid="uid://chglk5p1v121k" path="res://src/perry_run/melt_zone.tscn" id="5_qlbnr"]
[ext_resource type="PackedScene" uid="uid://u65hddr3i0os" path="res://src/perry_run/cp_3.tscn" id="6_v4o0x"]
[ext_resource type="PackedScene" uid="uid://dyvmjt6kgjcpy" path="res://src/perry_run/finish.tscn" id="7_c2dpw"]

[node name="PerryRun" type="Node2D"]

[node name="PerryRun" type="Node2D" parent="."]
script = ExtResource("2_1lkn6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="TileMap" parent="." instance=ExtResource("3_axivd")]
position = Vector2(40, 176)

[node name="Player" parent="." node_paths=PackedStringArray("clickable_area") instance=ExtResource("3_d1s5q")]
unique_name_in_owner = true
position = Vector2(112, 240)
clickable_area = NodePath("../ClickableArea")

[node name="ClickableArea" parent="." instance=ExtResource("2_xnsfy")]
unique_name_in_owner = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(112, 240)

[node name="CP1" parent="." instance=ExtResource("4_8luf4")]
position = Vector2(240, 488)

[node name="CP2" parent="." instance=ExtResource("5_eslgb")]
position = Vector2(496, 1000)

[node name="CP3" parent="." instance=ExtResource("6_v4o0x")]
position = Vector2(112, 744)

[node name="Finish" parent="." instance=ExtResource("7_c2dpw")]
position = Vector2(112, 248)

[node name="MeltZone" parent="." instance=ExtResource("5_qlbnr")]

[node name="RaceTrack" parent="." instance=ExtResource("4_f80jr")]

[connection signal="body_entered" from="CP1" to="PerryRun" method="_on_cp_1_body_entered"]
[connection signal="body_entered" from="CP2" to="PerryRun" method="_on_cp_2_body_entered"]
[connection signal="body_entered" from="CP3" to="PerryRun" method="_on_cp_3_body_entered"]
[connection signal="body_entered" from="Finish" to="PerryRun" method="_on_finish_body_entered"]
[connection signal="body_entered" from="MeltZone" to="PerryRun" method="_on_melt_zone_body_entered"]
[connection signal="body_exited" from="RaceTrack" to="PerryRun" method="_on_race_track_body_exited"]
